bug fix: set the padding of ql-editor(Quill) to 0, preventing the content overflow

--- a/web_content/static/blogYY/index.css
+++ b/web_content/static/blogYY/index.css
@@ -18,6 +18,11 @@ body {
     min-width: 1024px;
 }
 
+/* bug fix: change padding & margin of DOM element ql-editor in Quill */
+.ql-editor {
+    padding: 0;
+}
+
 .main {
     background-color: #bfcdac;
     background-image: url("/static/blogYY/blogYY.jpg");
